--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,14 +1,64 @@
-.App {
+@import url('https://fonts.googleapis.com/css?family=Copse');
+
+html, body {
+  height: 100%;
+  background: url('../../img.jpg') center center no-repeat;
+  background-size: cover;
+  background-attachment: fixed;  
+  font-family: 'Copse', serif;
+  color: white;
   text-align: center;
+}
+
+.deadline-date {
+  margin-top: 100px;
   font-size: 30px;
-  margin-top: 20%;
+  h1 {
+    font-size: 40px;
+    font-weight: bold;
+    color: #d9534f;
+    text-shadow: 1.5px 1.5px grey;
+  }
 }
 
-.title {
-  font-size: 50px;
+.clock {
+  margin: 40px 0;
+  font-size: 42px; 
+  padding: 10px 0;
+  div {
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.35);
+    padding: 10px;
+  }
+  span {
+    display: block;
+    font-size: 15px;
+  }
 }
 
-.clock div {
-  display: inline;
-  margin: 10px;
+.deadline-input {
+  margin: 20px 0;
+  border-radius: 0;
+}
+
+.btn {  
+  border-radius: 0;
+  margin-left: 5px;
+}
+
+
+@media all and (min-width: 768px) {
+  .deadline-date{
+    font-size: 40px;
+    margin-top: 80px;
+    h1 {
+      font-size: 50px;
+    }
+  }
+  .clock {
+    font-size: 100px;
+    span {
+      font-size: 20px;
+    }
+  }
 }
